--- a/data-analyst.html
+++ b/data-analyst.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692295981-data-analyst'>Octopus Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692295981-data-analyst'>Octopus Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
+<h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
+<h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Greece</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -172,7 +172,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/j/D162576C55'>Softheon - Jobs: Marketing Data Analyst - Apply online</a></h5> 
+<h5><a href='https://softheon.workable.com/j/D162576C55'>Softheon - Jobs: Marketing Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -181,7 +181,7 @@ Stuart.</p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hylinkgroup/4817c76d-1504-4119-ba61-d2b52b1c8c4a/apply'>Hylink Digital Solutions - Quantitative Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/hylinkgroup/4817c76d-1504-4119-ba61-d2b52b1c8c4a/apply'>Hylink Digital Solutions - Quantitative Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Quantitative Data Analyst. New York. Hylink - New York City ? Finance. Full-time. 
 Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -191,7 +191,7 @@ Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>5 days ago ... U.Group is an Advanced Technology and Creative Design company launched in 
 2019 after combining the data and domain expertise of ByteCubed with the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
+<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Analyst - O2E Brands. Vancouver, BC. Technology. Full-time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -233,7 +233,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/director-statistics-immunology-rheumatology-10722'>Director, Statistics (Immunology/Rheumatology) - AbbVie Careers</a></h5> 
+<h5><a href='https://abbvie.referrals.selectminds.com/jobs/director-statistics-immunology-rheumatology-10722'>Director, Statistics (Immunology/Rheumatology) - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -264,7 +264,7 @@ originations and servicing systems and data bases. The analyst will then be able
 <p>Jul 16, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
 not subject you to adverse treatment). Our company values diversity.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/andela/jobs/1783082'>Job Application for Intern - Data Analyst at Andela</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/andela/jobs/1783082'>Job Application for Intern - Data Analyst at Andela</a></h5> 
 <p><span class="badge badge-light">Austin New York City San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -284,7 +284,7 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Monitoring - Data Analyst / Engineer - AKTOR SA at 
 Ellaktor.</p>
@@ -425,7 +425,7 @@ interpreting data; Transform data to information that will facilitate decision m
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appannie/jobs/1780806'>Job Application for Data Analyst Intern, SG at App Annie</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appannie/jobs/1780806'>Job Application for Data Analyst Intern, SG at App Annie</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
